thanos add functions

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             <div class="box">
                 <h1>Thanos.css is inspired by Marvel Comics' Thanos. <br>It wipes half of the page visuals, effectively balancing your site.</h1>
                 <p>Try it now, enter a site url:</p>
-
+                <form action="" id="form">
                 <div class="input"><input type="text" id="web" placeholder="http://" value="">
-                    <div id="submit">&gt;&gt;</div>
+                    <input type="submit" id="submit" value="&gt;&gt;" />
                 </div>
+            </form>
             </div>
         </div>
 
