--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
 
         <div id="site"></div>
+        <div id="clone"></div>
         <script src="app.js"></script>
     </div>
 
